# routers/router.go
@@ -23,6 +23,7 @@ func init() {
 		beego.NSNamespace("/devtype", beego.NSInclude(&controllers.DevTypeController{})),
 		beego.NSNamespace("/device", beego.NSInclude(&controllers.DeviceController{})),
 		beego.NSNamespace("/blockuser", beego.NSInclude(&controllers.BlockUserController{})),
+		beego.NSNamespace("/transmit", beego.NSInclude(&controllers.TransmitController{})),
 	)
 	beego.AddNamespace(kgns)
 	//	beego.Router("/kindergarten/session", &controllers.SessionController{})
