# swagger/swagger.yml
@@ -346,7 +346,7 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/.KgRes'
+            $ref: '#/definitions/models.KgRes'
         "409":
           description: 园区名已被使用
         "500":
@@ -588,6 +588,36 @@ paths:
           description: userid或token为空
         "500":
           description: 内部错误
+  /transmit/:
+    post:
+      tags:
+      - transmit
+      description: 给设备转发命令
+      operationId: TransmitController.给设备转发命令
+      parameters:
+      - in: header
+        name: token
+        description: 会话token
+        required: true
+        type: string
+      - in: header
+        name: userid
+        description: 会话userid
+        required: true
+        type: integer
+        format: int64
+      - in: body
+        name: body
+        description: "true"
+        schema:
+          $ref: '#/definitions/mqtt.TransmitContent'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Devices'
+        "500":
+          description: 内部错误
   /user/:
     put:
       tags:
@@ -716,8 +746,6 @@ paths:
         "500":
           description: 内部错误
 definitions:
-  .KgRes:
-    type: object
   models.Block:
     title: Block
     type: object
@@ -869,6 +897,9 @@ definitions:
     properties:
       KgName:
         type: string
+  models.KgRes:
+    title: KgRes
+    type: object
   models.KgsRes:
     title: KgsRes
     type: object
@@ -936,7 +967,7 @@ definitions:
       UserName:
         type: string
   models.RegReq:
-    title: LoginReq
+    title: RegReq
     type: object
     properties:
       CellNum:
@@ -946,7 +977,7 @@ definitions:
       UserName:
         type: string
   models.RegRes:
-    title: LoginRes
+    title: RegRes
     type: object
     properties:
       CellNum:
@@ -958,3 +989,12 @@ definitions:
         format: int64
       UserName:
         type: string
+  mqtt.TransmitContent:
+    title: TransmitContent
+    type: object
+    properties:
+      Content:
+        type: string
+      DevID:
+        type: integer
+        format: int64
